[package]
name = "rust-rcs-core"
version = "0.3.1"
edition = "2021"
description = "Core libraries that provide basic RCS capabilities (SIP, MSRP, etc.)"
license = "Apache-2.0"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

name = "rust_rcs_core"
crate-type = ["rlib", "cdylib"]

[dependencies]

rust-strict-sdp = { version = "0.1" }

async-compression = { version = "0.4", features = ["futures-io", "brotli", "deflate", "gzip"] }
base64 = { version = "0.21" }
cached = { version = "0.46" }
chrono = { version = "0.4" }
cookie = { version = "0.18" }
data-encoding = { version = "2.5" }
futures = { version = "0.3" }
hickory-client = { version = "0.24", default-features = false }
httparse = { version = "1.8" }
libc = { version = "0.2" }
lzw = { version = "0.10" }
md-5 = { version = "0.10" }
quick-xml = { version = "0.31" }
rand = { version = "0.8" }
ring = { version = "0.17" }
rustls = { version = "0.22" }
tokio = { version = "1.35", features = ["rt-multi-thread", "io-util", "io-std", "net", "time", "macros", "sync"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["compat"] }
url = { version = "2.5" }
uuid = { version = "1.6", features = ["v4"] }
walkdir = { version = "2.4" }

[features]
default = []
android = []
ohos = []
